// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button isWaiting state matches snapshot 1`] = `
<button
  className="sc-bczRLJ jBPkZO"
  disabled={true}
>
  Submitting...
</button>
`;

exports[`Button matches light color snapshot 1`] = `
<button
  className="sc-bczRLJ fUWpMe"
>
  Click Me
</button>
`;

exports[`Button matches snapshot 1`] = `
<button
  className="sc-bczRLJ jBPkZO"
>
  Click Me
</button>
`;

exports[`Button renders as a tag 1`] = `
<a
  className="sc-bczRLJ jBPkZO"
>
  Click Me
</a>
`;

exports[`Button renders as a tag variant 1`] = `
<a
  className="sc-bczRLJ fUWpMe"
>
  Click Me
</a>
`;

exports[`Button renders button that looks like a link 1`] = `
<button
  className="sc-gsnTZi sc-dkzDqf czjxlp kMkEHE"
>
  Click Me
</button>
`;

exports[`Button renders plain button 1`] = `
<button
  className="sc-gsnTZi czjxlp"
>
  Click Me
</button>
`;
